feat: добавлена 404й маршрут и пейдж лоадер

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
     "main-page": "Main page",
-    "language-abbreviation": "RU"
+    "language-abbreviation": "RU",
+    "not-found-page": "Page not found"
 }
