--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
     "main-page": "Главная страница",
-    "language-abbreviation": "EN"
+    "language-abbreviation": "EN",
+    "not-found-page": "Страница не найдена"
 }
