feat: добавлена форма логина

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
-    "main-page": "Main page",
-    "language-abbreviation": "RU",
-    "not-found-page": "Page not found",
-    "error-message": "Something went wrong. Try reload this page."
+  "main-page": "Main page",
+  "language-abbreviation": "RU",
+  "not-found-page": "Page not found",
+  "error-message": "Something went wrong. Try reload this page.",
+  "login": "Login"
 }
