--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,7 @@
 {
-    "main-page": "Главная страница",
-    "language-abbreviation": "EN",
-    "not-found-page": "Страница не найдена",
-    "error-message": "Произошла ошибка, попробуйте перезагрузить страницу"
+  "main-page": "Главная страница",
+  "language-abbreviation": "EN",
+  "not-found-page": "Страница не найдена",
+  "error-message": "Произошла ошибка, попробуйте перезагрузить страницу",
+  "login": "Войти"
 }
