--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,10 @@
   "language-abbreviation": "EN",
   "not-found-page": "Страница не найдена",
   "error-message": "Произошла ошибка, попробуйте перезагрузить страницу",
-  "login": "Войти"
+  "login": "Войти",
+  "auth-error": "Неправильный логин или пароль",
+  "login-form": "Форма авторизации",
+  "logup-form": "Форма регистрации",
+  "logup": "Регистрация",
+  "logout": "Выйти"
 }
