feat: добавлены страницы для списка и конкретной статьи

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,15 +1,16 @@
 {
-  "main-page": "Main page",
-  "language-abbreviation": "RU",
-  "not-found-page": "Page not found",
-  "error-message": "Something went wrong. Try reload this page.",
-  "login": "Login",
-  "auth-error": "Wrong login or password",
-  "login-form": "Login form",
-  "logup-form": "Log up form",
-  "logup": "Log up",
-  "logout": "Log out",
-  "main-page-link": "Home",
-  "profile-page-link": "Profile",
-  "about-page-link": "About"
+    "main-page": "Main page",
+    "language-abbreviation": "RU",
+    "not-found-page": "Page not found",
+    "error-message": "Something went wrong. Try reload this page.",
+    "login": "Login",
+    "auth-error": "Wrong login or password",
+    "login-form": "Login form",
+    "logup-form": "Log up form",
+    "logup": "Log up",
+    "logout": "Log out",
+    "main-page-link": "Home",
+    "profile-page-link": "Profile",
+    "about-page-link": "About",
+    "article_list": "article list"
 }
