--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,15 +1,16 @@
 {
-  "main-page": "Главная страница",
-  "language-abbreviation": "EN",
-  "not-found-page": "Страница не найдена",
-  "error-message": "Произошла ошибка, попробуйте перезагрузить страницу",
-  "login": "Войти",
-  "auth-error": "Неправильный логин или пароль",
-  "login-form": "Форма авторизации",
-  "logup-form": "Форма регистрации",
-  "logup": "Регистрация",
-  "logout": "Выйти",
-  "main-page-link": "Главная",
-  "profile-page-link": "Профиль",
-  "about-page-link": "О нас"
+    "main-page": "Главная страница",
+    "language-abbreviation": "EN",
+    "not-found-page": "Страница не найдена",
+    "error-message": "Произошла ошибка, попробуйте перезагрузить страницу",
+    "login": "Войти",
+    "auth-error": "Неправильный логин или пароль",
+    "login-form": "Форма авторизации",
+    "logup-form": "Форма регистрации",
+    "logup": "Регистрация",
+    "logout": "Выйти",
+    "main-page-link": "Главная",
+    "profile-page-link": "Профиль",
+    "about-page-link": "О нас",
+    "article_list": "Список статей"
 }
